# mirael-agent-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  BUSINESS_MODEL.md  CHANGELOG.md  Dockerfile  PROGRESS.md  QUESTIONS.md  README.md  SUBMISSION.md  VIDEO_SCRIPT.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: architecture.md  use-cases.md
docs/adr/: 0001-tech-stack.md  0002-agent-orchestration.md
examples/arbitrum_aave_demo/: ingest_aave_docs.py  main.py
examples/discord_demo/: bot.py
examples/hyperliquid_demo/: README.md  chat.py  ingest_docs.py
examples/telegram_demo/: bot.py
src/mirael/: __init__.py  cli.py  config.py  exceptions.py  logging.py
src/mirael/agent/: __init__.py  base.py  memory.py  models.py  prompts.py
src/mirael/chains/: __init__.py  base.py  evm.py  gmx.py  hyperliquid.py  models.py
src/mirael/channels/: __init__.py  base.py  discord.py  telegram.py
src/mirael/intelligence/: __init__.py  alerts.py  digest.py  governance.py  whale.py
src/mirael/knowledge/: __init__.py  embeddings.py  ingest.py  models.py  retriever.py  vector_store.py
src/mirael/llm/: __init__.py  anthropic.py  base.py  models.py
src/mirael/monitoring/: health_monitor.py
tests/: conftest.py
tests/e2e/: conftest.py  test_agent_e2e.py  test_discord_bot_e2e.py  test_hyperliquid_e2e.py  test_intelligence_e2e.py  test_qdrant_e2e.py  test_rag_pipeline_e2e.py
tests/integration/: test_hyperliquid_mainnet.py  test_qdrant_integration.py
tests/unit/: test_aave_reader.py  test_agent.py  test_channels.py  test_config.py  test_embeddings.py  test_exceptions.py  test_gmx_reader.py  test_health_monitor.py  test_hyperliquid_reader.py  test_ingest.py  test_intelligence.py  test_llm_anthropic.py  test_logging.py  test_memory.py  test_prompts.py  test_retriever.py  test_vector_store.py
tests/volume/: test_agent_load.py  test_concurrent_retrieval.py  test_embedding_throughput.py  test_intelligence_stress.py
